@@ -9,15 +9,17 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.BDDMockito.given;
-import static org.mockito.Mockito.mock;
+import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
 @DisplayName("StatsService 테스트")
 class StatsServiceTest {
 
@@ -33,8 +35,10 @@ class StatsServiceTest {
         // Given
         Query query = mock(Query.class);
         Object[] row = new Object[]{"2024-01-01", 100};
-        given(entityManager.createNativeQuery(anyString())).willReturn(query);
-        given(query.getResultList()).willReturn(List.of(row));
+        
+        when(entityManager.createNativeQuery(anyString())).thenReturn(query);
+        when(query.setParameter(anyString(), any())).thenReturn(query);
+        when(query.getResultList()).thenReturn(java.util.Collections.singletonList(row));
 
         // When
         List<StatsDto> result = statsService.getConnectionStats("2024-01-01", "2024-01-31", "KIND");
@@ -51,8 +55,10 @@ class StatsServiceTest {
         // Given
         Query query = mock(Query.class);
         Object[] row = new Object[]{"2024-01-01", 50};
-        given(entityManager.createNativeQuery(anyString())).willReturn(query);
-        given(query.getResultList()).willReturn(List.of(row));
+        
+        when(entityManager.createNativeQuery(anyString())).thenReturn(query);
+        when(query.setParameter(anyString(), any())).thenReturn(query);
+        when(query.getResultList()).thenReturn(java.util.Collections.singletonList(row));
 
         // When
         List<StatsDto> result = statsService.getBoardStats("2024-01-01", "2024-01-31", "KIND");
@@ -68,8 +74,10 @@ class StatsServiceTest {
         // Given
         Query query = mock(Query.class);
         Object[] row = new Object[]{"2024-01-01", 10};
-        given(entityManager.createNativeQuery(anyString())).willReturn(query);
-        given(query.getResultList()).willReturn(List.of(row));
+        
+        when(entityManager.createNativeQuery(anyString())).thenReturn(query);
+        when(query.setParameter(anyString(), any())).thenReturn(query);
+        when(query.getResultList()).thenReturn(java.util.Collections.singletonList(row));
 
         // When
         List<StatsDto> result = statsService.getUserStats("2024-01-01", "2024-01-31", "KIND");
@@ -85,8 +93,10 @@ class StatsServiceTest {
         // Given
         Query query = mock(Query.class);
         Object[] row = new Object[]{"2024-01-01", 200};
-        given(entityManager.createNativeQuery(anyString())).willReturn(query);
-        given(query.getResultList()).willReturn(List.of(row));
+        
+        when(entityManager.createNativeQuery(anyString())).thenReturn(query);
+        when(query.setParameter(anyString(), any())).thenReturn(query);
+        when(query.getResultList()).thenReturn(java.util.Collections.singletonList(row));
 
         // When
         List<StatsDto> result = statsService.getRequestStats("2024-01-01", "2024-01-31", "KIND");
@@ -100,7 +110,7 @@ class StatsServiceTest {
     @DisplayName("통계 조회 실패 - 예외 발생 시 빈 리스트 반환")
     void executeStatsQuery_Exception_ReturnsEmptyList() {
         // Given
-        given(entityManager.createNativeQuery(anyString())).willThrow(new RuntimeException("DB Error"));
+        when(entityManager.createNativeQuery(anyString())).thenThrow(new RuntimeException("DB Error"));
 
         // When
         List<StatsDto> result = statsService.getConnectionStats("2a", "2b", "k");
